--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -5,14 +5,27 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.plattysoft.counterclockwise"
+        applicationId "com.plattysoft.ccwwatchface"
         minSdkVersion 14
         targetSdkVersion 22
-        versionCode 1
+        versionCode 3
         versionName "1.0"
     }
+
+    signingConfigs {
+        release {
+            Properties properties = new Properties()
+            properties.load(project.rootProject.file('local.properties').newDataInputStream())
+            storeFile file(properties.getProperty("storeFile"))
+            storePassword properties.getProperty("storePassword")
+            keyAlias properties.getProperty("keyAlias")
+            keyPassword properties.getProperty("keyPassword")
+        }
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
